# generowanie_sygnalu

./: CMakeLists.txt  README.md  main.c
include/: header.h  wektor.h
